--- a/style.css
+++ b/style.css
@@ -61,6 +61,9 @@ body::-webkit-scrollbar {
   top: 37%;
   left: 37%;
   margin: auto;
+
+  /* animation: name duration timing-function delay iteration-count direction fill-mode; */
+  animation: SmalltoNormalDialog;
 }
 
 /* DOT Animation */
@@ -228,6 +231,25 @@ body::-webkit-scrollbar {
   }
 }
 
+
+@keyframes blurizable{
+  0%{filter: blur(1px);}
+  100% {
+    filter: blur(10px);
+  }
+
+}
+
+@keyframes outBlur{
+  0%{filter: blur(10px);}
+  100% {
+    filter: blur(0px);
+  }
+
+}
+
+
+
 @keyframes SmalltoNormalDialog {
   0% {
     transform: scale(0.5);
@@ -236,6 +258,42 @@ body::-webkit-scrollbar {
     transform: scale(1);
   }
 }
+
+/**
+ * ----------------------------------------
+ * animation tracking-in-expand
+ * ----------------------------------------
+ */
+ @keyframes tracking-in-expand {
+  0% {
+    letter-spacing: -0.5em;
+    opacity: 0;
+  }
+  40% {
+    opacity: 0.6;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+
+/**
+ * ----------------------------------------
+ * animation slide-in-left
+ * ----------------------------------------
+ */
+ @keyframes slide-in-left {
+  0% {
+    transform: translateX(-1000px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
 
 /* you have to add all the dot and dialog */
 /* @media (width<1300px) {
@@ -319,12 +377,12 @@ body::-webkit-scrollbar {
 @media (min-height: 1300px) {
   
   .rs-module{
-    height: 100%;
-    min-width: 100%;
+    height: 100vh;
+    min-width: 100vw;
   }
   #slider-1{
-    height: 110%;
-    min-width: 100%;
+    height: 100vh;
+    /* min-width: 100%; */
   }
   
 }
@@ -340,7 +398,7 @@ body::-webkit-scrollbar {
     min-width: 100vw;
   }
   #slider-1{
-    min-height: 100vh;
+    height: 110vh;
     min-width: 100vw;
   }
   
@@ -376,6 +434,7 @@ body::-webkit-scrollbar {
   /* padding: 0;
    */
   border: none;
+  animation: slide-in-left 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 
 }
 
@@ -414,3 +473,6 @@ body::-webkit-scrollbar {
     display: none;
   }
 }
+
+
+
