--- a/style.css
+++ b/style.css
@@ -421,6 +421,8 @@ body::-webkit-scrollbar {
    z-index: 10300;
    bottom: 15px;
    left: 15px;
+   margin: 4px;
+   padding: 4px;
 }
 
 .menuItemButton{
@@ -435,6 +437,7 @@ body::-webkit-scrollbar {
   position: relative;
   /* padding: 0;
    */
+  margin-top: 10px;
   border: none;
   /* animation: slide-in-left 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both; */
 
