--- a/style.css
+++ b/style.css
@@ -363,15 +363,23 @@ body::-webkit-scrollbar {
 
 /* Mostrar texto al pasar el mouse sobre el botón */
 .navigateButton:hover .text {
-  display: block;
+  /* display: block; */
+  width: var(--ancho, 0px);
 }
 
 
 /* Estilos para el texto dentro del botón */
 .navigateButton .text{
-  display: none;
+  width:0px;
+  display: inline-block; /* Asegurar que el texto se comporte como un bloque en línea */
+  overflow: hidden; /* Ocultar desbordamiento para que el texto no se salga del contenedor */
+  white-space: nowrap; /* Evitar que el texto se rompa en varias líneas */
+  text-overflow: ellipsis; /* Añadir puntos suspensivos si el texto es demasiado largo */
+  /* display: none; */
   color: #f0f0f0;
   margin-top: 4.5px;
+  transition: width 1s ease; /* Transición suave para el cambio de ancho */
+
 }
 
 
