--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ body::-webkit-scrollbar {
   animation: SmalltoNormalDialog 1s;
   height: auto;
   background-color: rgb(255, 255, 255);
-  z-index: 1000;
+  z-index: 110;
   position: relative;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
@@ -238,7 +238,7 @@ body::-webkit-scrollbar {
 .points-container {
   position: absolute;
   top: 0px;
-  z-index: 1002;
+  z-index: 102;
 }
 
 /* Punto genérico */
@@ -246,33 +246,33 @@ body::-webkit-scrollbar {
   position: absolute;
   width: 20px;
   height: 20px;
-  z-index: 1004;
+  z-index: 104;
   background-color: rgba(255, 255, 255, 0);
   border-radius: 50%;
-  z-index: 1004;
+  z-index: 104;
 }
 
 /* pantalla es de al menos 1300 píxeles osea , mas de 1300 px */
 @media (min-height: 1300px) {
   .rs-module {
-    height: 100vh;
-    min-width: 100vw;
+    min-height: 100vh;
+    width: 100vw;
   }
   #slider-1 {
-    height: 100vh;
-    /* min-width: 100%; */
+    min-height: 100vh;
+    width: 100vw;
   }
 }
 
 /* Media query para pantallas más pequeñas */
 @media (max-height: 1300px) {
   .rs-module {
-    height: 100vh;
-    min-width: 100vw;
+    min-height: 100vh;
+    width: 100vw;
   }
   #slider-1 {
-    height: 110vh;
-    min-width: 100vw;
+    min-height: 100vh;
+    width: 100vw;
   }
 }
 
@@ -287,7 +287,7 @@ body::-webkit-scrollbar {
   text-decoration: none;
   border: 1px solid #ffffff;
   color: #ffffff;
-  z-index: 10300;
+  z-index: 130;
   bottom: 15px;
   left: 15px;
   margin: 4px;
@@ -326,7 +326,7 @@ body::-webkit-scrollbar {
   background-color: #fcfcfc00;
   border: 3px solid #ff000000;
   color: #ffffff;
-  z-index: 10300;
+  z-index: 130;
   display: none;
 }
 
@@ -342,7 +342,7 @@ body::-webkit-scrollbar {
 .navigateButton{
   position: absolute;
   background-color: #ffffff00;
-  z-index: 100300;
+  z-index: 131;
   border: none;
   height: 30px;
   border: 2px solid rgb(255, 255, 255);
