--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ body {
   scrollbar-color: none;
   z-index: 101;
   overflow: auto;
+  animation: outBlur 2s;
 }
 
 body::-webkit-scrollbar {
@@ -224,6 +225,7 @@ body::-webkit-scrollbar {
     transform: translateX(-1000px);
     opacity: 0;
   }
+
 }
 
 /**
@@ -253,26 +255,29 @@ body::-webkit-scrollbar {
 }
 
 /* pantalla es de al menos 1300 píxeles osea , mas de 1300 px */
-@media (min-height: 1300px) {
+@media (min-width: 1300px) {
   .rs-module {
     min-height: 100vh;
     width: 100vw;
   }
+
+
   #slider-1 {
     min-height: 100vh;
     width: 100vw;
+  
   }
 }
 
 /* Media query para pantallas más pequeñas */
-@media (max-height: 1300px) {
+@media (max-width: 1300px) {
   .rs-module {
-    min-height: 100vh;
-    width: 100vw;
+    height: 100vh;
+    min-width: 100vw;
   }
   #slider-1 {
-    min-height: 100vh;
-    width: 100vw;
+    height: 100vh;
+    min-width: 100vw;
   }
 }
 
@@ -285,7 +290,7 @@ body::-webkit-scrollbar {
   text-transform: capitalize;
   text-align: center;
   text-decoration: none;
-  border: 1px solid #ffffff;
+  border: 1px solid #ffffff; 
   color: #ffffff;
   z-index: 130;
   bottom: 15px;
@@ -293,6 +298,26 @@ body::-webkit-scrollbar {
   margin: 4px;
   padding: 4px;
 }
+
+.logo-mobile {
+  font-size: x-large;
+  font-weight: 900;
+  position: fixed;
+  background-color: #ffffff00;
+  text-transform: capitalize;
+  text-align: center;
+  text-decoration: none;
+  /* border: 1px solid #ffffff; */
+  color: #ffffff;
+  z-index: 130;
+  top: 15px;
+  font-weight: 700;
+  text-decoration: inherit;
+  left: calc(50% - 98px);
+  margin: 4px;
+  padding: 4px;
+}
+
 
 /* Elemento de menú */
 .menuItemButton {
@@ -306,8 +331,9 @@ body::-webkit-scrollbar {
   position: relative;
   margin-top: 10px;
   border: none;
+  display: block; /* Asegura que cada botón ocupe una línea completa */
+  width: 100%; /* Asegura que el botón ocupe todo el ancho disponible */
 }
-
 /* Contenedor de texto */
 .contenedor-texto {
   max-width: 55vw;
@@ -315,11 +341,15 @@ body::-webkit-scrollbar {
   text-overflow: ellipsis;
   border: 1px solid #25ab0000;
   color: white;
+  font-family: Helvetica 'Neue wf', Helvetica, Arial, sans-serif !important;
+  /* border: 1px solid #ffffff; */
+  font-weight: 700;
+  text-decoration: inherit;
 }
 
 /* Menú */
 .menu {
-  top: 0;
+  top: 60px;
   left: 0;
   height: 100%;
   position: fixed;
@@ -335,6 +365,9 @@ body::-webkit-scrollbar {
   .buttonMenu {
     display: none;
   }
+  .logo-mobile{
+    display: none;
+  } 
 }
 
 
