--- a/style.css
+++ b/style.css
@@ -56,14 +56,10 @@ body::-webkit-scrollbar {
 /* DOT Animation */
 
 .dot {
-  width: 50px;
-  height: 50px;
+
   background-color: rgba(255, 0, 0, 0);
   box-shadow: 0 0 0 1px rgb(255, 255, 255);
-  width: 30px;
-  height: 30px;
   padding: 10px;
-  border-radius: 50%;
   z-index: 10;
 }
 
@@ -73,9 +69,9 @@ body::-webkit-scrollbar {
 
 
 .dot:hover {
-  opacity: 0%;
+  opacity: 1%;
   animation: none;
-  scale: 1.5;
+  scale: 0.35; 
 }
 
 .dot:hover + .box {
@@ -146,11 +142,12 @@ body::-webkit-scrollbar {
     transform: scale(0.5);
   }
   100% {
-    transform: scale(1);
+    transform: scale(.8);
     opacity: 15%;
   }
+
   50% {
-    transform: scale(1.5);
+    transform: scale(1.1);
     opacity: 100%;
   }
 }
@@ -246,12 +243,13 @@ body::-webkit-scrollbar {
 /* Punto genérico */
 .point {
   position: absolute;
-  width: 20px;
-  height: 20px;
+  width: calc(20px *var(--tscale,1));
+  height: calc(20px *var(--tscale,1));
   z-index: 104;
   background-color: rgba(255, 255, 255, 0);
   border-radius: 50%;
   z-index: 104;
+  transform: scale(3);
 }
 
 /* pantalla es de al menos 1300 píxeles osea , mas de 1300 px */
@@ -313,8 +311,9 @@ body::-webkit-scrollbar {
   top: 15px;
   font-weight: 700;
   text-decoration: inherit;
-  left: calc(50% - 98px);
+  left: calc(50% - 67px);
   margin: 4px;
+  margin-top: 7px;
   padding: 4px;
 }
 
@@ -345,6 +344,10 @@ body::-webkit-scrollbar {
   /* border: 1px solid #ffffff; */
   font-weight: 700;
   text-decoration: inherit;
+  user-select: none;
+  -webkit-user-select: none; /* Safari */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
 }
 
 /* Menú */
@@ -383,6 +386,7 @@ body::-webkit-scrollbar {
   width:auto;
   display: flex ;
   flex-direction: row;
+  transform: scale(1);
 }
 
 /* Estilos para ícono de navegación dentro del botón */
@@ -397,7 +401,8 @@ body::-webkit-scrollbar {
 /* Mostrar texto al pasar el mouse sobre el botón */
 .navigateButton:hover .text {
   /* display: block; */
-  width: var(--ancho, 0px);
+  width: calc(var(--ancho, 0) * 1.3);
+  
 }
 
 
@@ -410,14 +415,14 @@ body::-webkit-scrollbar {
   text-overflow: ellipsis; /* Añadir puntos suspensivos si el texto es demasiado largo */
   /* display: none; */
   color: #f0f0f0;
-  margin-top: 4.5px;
+  margin-top:2px;
   transition: width 0.5s ease; /* Transición suave para el cambio de ancho */
+  font-size: large;
 
 }
 
 .text:hover{
   color: #ffffff;
-  transform: scale(1.07);
 }
 
 /* Cambiar color del botón al pasar el mouse sobre él */
@@ -425,3 +430,10 @@ body::-webkit-scrollbar {
   color: #010101;
 }
 
+.header-container img{
+   height: 40px;
+}
+
+.logo-mobile img{
+  height: 40px;
+}
