--- a/index-header.css
+++ b/index-header.css
@@ -43,6 +43,7 @@
     margin-left: 20px;
 
   }
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Space+Grotesk:wght@300..700&display=swap');
   
   .nav-item a {
     color: #fff; /* Ajustar el color para mayor visibilidad */
@@ -50,6 +51,8 @@
     font-size: 16px;
     font-weight: bold;
     transition: color 0.3s ease;
+    
+    
   }
   
   .nav-item a.active {
