--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 /* CSS */
 
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Space+Grotesk:wght@300..700&display=swap');
+
 body {
   background-color: rgba(249, 249, 249, 0);
   margin: 0;
@@ -90,17 +92,23 @@ body::-webkit-scrollbar {
   border-bottom-right-radius: 10px;
   border-radius: 50px;
   text-align: center;
-  font-size: x-large;
-  font-family: “Brush Script MT”;
+  font-size: 20px;
+  /* font-family: “Brush Script MT”; */
   padding-left: 12px;
   padding-right: 8px;
-  padding-top: 5px;
+  /* padding-top: 14px;
+  padding-bottom: 20px;
+  margin-bottom: 14PX; */
+  /* display: block !important; */
+  height: 25px !important ;
   white-space: nowrap;
   filter: drop-shadow(0 10px 8px rgb(5, 0, 0))
     drop-shadow(0 4px 3px rgb(0 0 0 / 0.1));
   height: 35px;
   display: none;
   z-index: 20;
+  font-family: "Bebas Neue", sans-serif;
+  
 }
 
 .chule-direction {
@@ -110,7 +118,7 @@ body::-webkit-scrollbar {
   height: 17px;
   border-radius: 0%;
   position: relative;
-  top: -48.5px;
+  top: -42.5px;
   left: 0px;
   z-index: 30;
   margin: auto;
@@ -414,9 +422,10 @@ body::-webkit-scrollbar {
   text-overflow: ellipsis; /* Añadir puntos suspensivos si el texto es demasiado largo */
   /* display: none; */
   color: #f0f0f0;
-  margin-top:2px;
+  margin-top:1px;
   transition: width 0.5s ease; /* Transición suave para el cambio de ancho */
   font-size: large;
+  font-family: "Bebas Neue", sans-serif;
 
 }
 
@@ -438,8 +447,15 @@ body::-webkit-scrollbar {
 }
 
 /* _________________________________________________________________________________  */
+/* _________________________________________________________________________________  */
+/* _________________________________________________________________________________  */
+/* _________________________________________________________________________________  */
+/* _________________________________________________________________________________  */
+/* _________________________________________________________________________________  */
+/* _________________________________________________________________________________  */
 
-/* CSS rules are kept repetitive so that you can get CSS rules for each button easily :) */
+
+/* _________________________________________________________________________________ */
 
 
 
@@ -552,7 +568,7 @@ body::-webkit-scrollbar {
   line-height: 1;
   padding: 9px 4px;
   /* background-color: #03a9f4; */
-  background-image: url(./img/usa.ico);
+  background-image: url(https://cdn.shopify.com/s/files/1/0765/8242/0785/files/english-icon.ico?v=1723667749);
 
   background-size: contain; /* Ajusta la imagen para que se contenga dentro del elemento */
   background-repeat: no-repeat; /* Evita que la imagen se repita */
@@ -565,7 +581,7 @@ body::-webkit-scrollbar {
 #button-1 .checkbox:checked + .knobs:before {
   content: "ES";
   left: 42px;
-  background-image: url(./img/spain.ico);
+  background-image: url(https://cdn.shopify.com/s/files/1/0765/8242/0785/files/spanish-icon.ico?v=1723667710);
 
 
 }
